fixed title contrast issues

--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -48,8 +48,8 @@ $f-d17: 0.10049617492923625em;
 $f-d18: 0.0877914951989026em;
 
 // (t)heme
-$t-fg: $black;
-$t-bg: $white;
+$t-bg: $black;
+$t-fg: $white;
 $t-subdue: $gray;
 $t-active: $blue;
 
